fixed paragraph align issue

--- a/main.css
+++ b/main.css
@@ -87,6 +87,7 @@ body {
     font-size: 20px;
     color: #13214A;
     padding-right: 50px;
+    text-align: left;
 }
 
 #contact-button {
